重构mcp